# ttyper

./: Cargo.toml  README.md
resources/runtime/rank/: seed-s
src/: chaos.rs  config.rs  gameplay.rs  history.rs  main.rs  race.rs  settings.rs  tunnel.rs  ui.rs
src/rank/: generate.rs  ladder.rs  mod.rs  promotion.rs  recipe.rs  status.rs
src/test/: mod.rs  results.rs
