[package]
name = "ttyper"
description = "Terminal-based typing test."
version = "1.6.0"
readme = "README.md"
repository = "https://github.com/max-niederman/ttyper.git"
homepage = "https://github.com/max-niederman/ttyper"
license = "MIT"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2021"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
arboard = { version = "3", default-features = false }
clap_complete = "^4.5"
crossterm = "^0.27"
ctrlc = "3"
dirs = "^5.0"
rust-embed = "^8.2"
serde_json = "^1.0"
toml = "^0.8"

[dependencies.ratatui]
version = "^0.25"

[dependencies.rand]
version = "^0.8"
features = ["alloc"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies]
tempfile = "3.27.0"

